Fix to allow scrolling to make data at the bottom visible. Css modifications for footer.

--- a/webapp/src/main/webapp/app/css/app.css
+++ b/webapp/src/main/webapp/app/css/app.css
@@ -4,13 +4,13 @@ html, body
 {
 	margin: 0;			/* Remove body margin/padding */
 	padding: 0;
-	height: 100%;
+	/**height: 100%;*/
 }
 
 body {
 	background-color: #FFF;
 	padding-top: 50px;
-	padding-bottom: 100px;
+	padding-bottom: 40px;
 }
 
 p {
@@ -48,4 +48,8 @@ body {
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
+}
+
+.navbar {
+  min-height: 30px;
 }
